--- a/tests/08_v2_env_context.yml
+++ b/tests/08_v2_env_context.yml
@@ -102,34 +102,40 @@ testcases:
         - result.systemoutjson ShouldHaveLength 2
         - result.systemoutjson.systemoutjson0.status ShouldEqual "Skipped"
         - result.systemoutjson.systemoutjson1.status ShouldEqual "Success"
-      retry: 20
-      delay: 5
+      retry: 100
+      delay: 1
 
     - name: Check that the CDS workflow has at least one execution and is Success
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --format json"
       assertions:
         - result.systemoutjson ShouldHaveLength 1
         - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
-      retry: 20
-      delay: 5
+      retry: 100
+      delay: 1
       vars:
         workflowRunID:
           from: result.systemoutjson.systemoutjson0.id
 
-    - name: Download logs
-      script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow logs download {{.cds_project}} {{.workflowRunID}}
-
-    - name: Check workflowEnv log content
-      script: "cat {{.cds_workflow}}-1-1-init-workflowEnv | grep \"barWorkflow\""
-    - name: Check jobEnv log content
-      script: "cat {{.cds_workflow}}-1-1-overrideEnv-jobEnv | grep \"barJob\""
-    - name: Check stepEnv log content
-      script: "cat {{.cds_workflow}}-1-1-overrideEnv-stepEnv | grep \"barStep\""
-    - name: Check globEnv log content
-      script: "cat {{.cds_workflow}}-1-1-overrideEnv-globEnv | grep \"{{.cds_workflow}}\""
-    - name: Check stringVar log content
-      script: "cat {{.cds_workflow}}-1-1-overrideEnv-stringVar && cat {{.cds_workflow}}-1-1-overrideEnv-stringVar | grep \"value\""  
-    - name: Check secretVar log content
-      script: "cat {{.cds_workflow}}-1-1-overrideEnv-secretVar && cat {{.cds_workflow}}-1-1-overrideEnv-secretVar | grep \"**********\""
-    - name: Check multiline secret
-      script: "cat {{.cds_workflow}}-1-1-overrideEnv-varset1 && cat {{.cds_workflow}}-1-1-overrideEnv-varset1 | grep \"**********\""   
+    - name: Download and check logs
+      script: |-
+        #!/bin/bash
+        set -e
+        FILE=/tmp/`uuidgen`
+        mkdir -p $FILE && cd $FILE
+        {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow logs download {{.cds_project}} {{.workflowRunID}}
+        # Check workflowEnv log content
+        cat {{.cds_workflow}}-1-1-init-workflowEnv | grep "barWorkflow"
+        # Check jobEnv log content
+        cat {{.cds_workflow}}-1-1-overrideEnv-jobEnv | grep "barJob"
+        # Check stepEnv log content
+        cat {{.cds_workflow}}-1-1-overrideEnv-stepEnv | grep "barStep"
+        # Check globEnv log content
+        cat {{.cds_workflow}}-1-1-overrideEnv-globEnv | grep "{{.cds_workflow}}"
+        # Check stringVar log content
+        cat {{.cds_workflow}}-1-1-overrideEnv-stringVar && cat {{.cds_workflow}}-1-1-overrideEnv-stringVar | grep "value"
+        # Check secretVar log content
+        cat {{.cds_workflow}}-1-1-overrideEnv-secretVar && cat {{.cds_workflow}}-1-1-overrideEnv-secretVar | grep "**********"
+        # Check multiline secret
+        cat {{.cds_workflow}}-1-1-overrideEnv-varset1 && cat {{.cds_workflow}}-1-1-overrideEnv-varset1 | grep "**********"
+      retry: 60
+      delay: 1
