--- a/tests/08_v2_workflow_generic_artifacts_with_artifactory.yml
+++ b/tests/08_v2_workflow_generic_artifacts_with_artifactory.yml
@@ -52,7 +52,7 @@ testcases:
 
   - name: Prepare integration for project
     script: |-
-      /bin/bash -c cat <<- EOF > /tmp/artifactory.yaml
+      /bin/bash -c cat <<- EOF > /tmp/artifactory-{{.cds_project}}.yaml
       name: artifactory-{{.rt_project}}
       model:
         name: Artifactory
@@ -96,7 +96,7 @@ testcases:
       EOF
 
   - name: Import integration for project
-    script: {{.cdsctl}} -f {{.cdsctl.config}} project integration import {{.cds_project}} /tmp/artifactory.yaml
+    script: {{.cdsctl}} -f {{.cdsctl.config}} project integration import {{.cds_project}} /tmp/artifactory-{{.cds_project}}.yaml
 
   - name: Assert integration is imported on project
     script: '{{.cdsctl}} -f {{.cdsctl.config}} project integration list {{.cds_project}}'
