--- a/tests/08_v2_workflow_integration.yml
+++ b/tests/08_v2_workflow_integration.yml
@@ -47,7 +47,7 @@ testcases:
   steps:
   - name: Prepare artifactory integration yaml file
     script: |-
-      /bin/bash -c cat <<- EOF > /tmp/project_integration_artifactory.yml
+      /bin/bash -c cat <<- EOF > /tmp/project_integration_artifactory-{{.cds_project}}.yml
       name: artifactory
       model:
         name: Artifactory
@@ -91,7 +91,7 @@ testcases:
       EOF
 
   - name: Import artifactory integration yaml file
-    script: "{{.cdsctl}} -f {{.cdsctl.config}} project integration import {{.cds_project}} /tmp/project_integration_artifactory.yml"
+    script: "{{.cdsctl}} -f {{.cdsctl.config}} project integration import {{.cds_project}} /tmp/project_integration_artifactory-{{.cds_project}}.yml"
 
 - name: Push workflow file
   steps:
