fix: update project name

--- a/tests/08_v2_cli_variableset_migrate.yml
+++ b/tests/08_v2_cli_variableset_migrate.yml
@@ -1,6 +1,6 @@
 name: Project VariableSet Command TestSuite
 vars:
-  cds_project: "ITV2VARIABLESET"
+  cds_project: "ITV2VARIABLESETMIG"
 testcases:
 - name: prepare test
   steps:
